// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-table> Component Twig-rendered Table with HTML comments 1`] = `
<bolt-table format="regular"
            first-col-fixed-width
>
  <table class="c-bolt-table c-bolt-table--first-col-fixed-width">
    <tbody class="c-bolt-table__body">
      <tr class="c-bolt-table__row">
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R1C1
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R1C2
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R1C3
        </td>
      </tr>
      <tr class="c-bolt-table__row">
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R2C1
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R2C2
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R2C3
        </td>
      </tr>
      <tr class="c-bolt-table__row">
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R3C1
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R3C2
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R3C3
        </td>
      </tr>
    </tbody>
  </table>
</bolt-table>
`;

exports[`<bolt-table> Component Twig-rendered Table with HTML comments 2`] = `
<bolt-table
  first-col-fixed-width=""
  format="regular"
  style=""
>
  <!---->
  
      
      
  <table
    class="c-bolt-table c-bolt-table--first-col-fixed-width"
    style=""
  >
    
        
    <!---->
    
        
            
    <tbody
      class="c-bolt-table__body"
      style=""
    >
      
              
      <!---->
      
                  
        
      <tr
        class="c-bolt-table__row"
        style=""
      >
        
          
        <!---->
        
                
          
        <td
          class="c-bolt-table__cell c-bolt-table__cell--data"
          style=""
        >
          
            
        R1C1 
      
          
        </td>
        
        
              
        <!---->
        
                
          
        <td
          class="c-bolt-table__cell c-bolt-table__cell--data"
          style=""
        >
          
            
         R1C2 
      
          
        </td>
        
        
              
        <!---->
        
                
          
        <td
          class="c-bolt-table__cell c-bolt-table__cell--data"
          style=""
        >
          
            
         R1C3 
      
          
        </td>
        
        
              
        <!---->
        
        
      </tr>
      
      
                
      <!---->
      
                  
        
      <tr
        class="c-bolt-table__row"
        style=""
      >
        
          
        <!---->
        
                
          
        <td
          class="c-bolt-table__cell c-bolt-table__cell--data"
          style=""
        >
          
            
         R2C1 
      
          
        </td>
        
        
              
        <!---->
        
                
          
        <td
          class="c-bolt-table__cell c-bolt-table__cell--data"
          style=""
        >
          
            
         R2C2 
      
          
        </td>
        
        
              
        <!---->
        
                
          
        <td
          class="c-bolt-table__cell c-bolt-table__cell--data"
          style=""
        >
          
            
         R2C3 
      
          
        </td>
        
        
              
        <!---->
        
        
      </tr>
      
      
                
      <!---->
      
                  
        
      <tr
        class="c-bolt-table__row"
        style=""
      >
        
          
        <!---->
        
                
          
        <td
          class="c-bolt-table__cell c-bolt-table__cell--data"
          style=""
        >
          
            
         R3C1 
      
          
        </td>
        
        
              
        <!---->
        
                
          
        <td
          class="c-bolt-table__cell c-bolt-table__cell--data"
          style=""
        >
          
            
         R3C2 
      
          
        </td>
        
        
              
        <!---->
        
                
          
        <td
          class="c-bolt-table__cell c-bolt-table__cell--data"
          style=""
        >
          
            
         R3C3 
      
          
        </td>
        
        
              
        <!---->
        
        
      </tr>
      
      
                
      <!---->
      
            
    </tbody>
    
          
      
    <!---->
    
      
  </table>
  
    
  <!---->
</bolt-table>
`;

exports[`<bolt-table> Component Web Component-rendered Table with HTML comments 1`] = `
<bolt-table
  first-col-fixed-width=""
  style=""
>
  <!---->
  
      
      
  <table
    class="c-bolt-table c-bolt-table--first-col-fixed-width"
    style=""
  >
    
        
    <!---->
    
        
            
    <thead
      class="c-bolt-table__head"
      style=""
    >
      
              
      <!---->
      
                  
        
      <tr
        class="c-bolt-table__row"
        style=""
      >
        
          
        <!---->
        
                
          
        <th
          class="c-bolt-table__cell c-bolt-table__cell--header"
          scope="col"
          style=""
        >
          
            
        Prop Name
      
          
        </th>
        
        
              
        <!---->
        
                
          
        <th
          class="c-bolt-table__cell c-bolt-table__cell--header"
          scope="col"
          style=""
        >
          
            
        Description
      
          
        </th>
        
        
              
        <!---->
        
                
          
        <th
          class="c-bolt-table__cell c-bolt-table__cell--header"
          scope="col"
          style=""
        >
          
            
        Type
      
          
        </th>
        
        
              
        <!---->
        
                
          
        <th
          class="c-bolt-table__cell c-bolt-table__cell--header"
          scope="col"
          style=""
        >
          
            
        Default Value
      
          
        </th>
        
        
              
        <!---->
        
                
          
        <th
          class="c-bolt-table__cell c-bolt-table__cell--header"
          scope="col"
          style=""
        >
          
            
        Option(s)
      
          
        </th>
        
        
              
        <!---->
        
        
      </tr>
      
      
                
      <!---->
      
            
    </thead>
    
          
      
    <!---->
    
        
            
    <tbody
      class="c-bolt-table__body"
      style=""
    >
      
              
      <!---->
      
                  
        
      <tr
        class="c-bolt-table__row"
        style=""
      >
        
          
        <!---->
        
                
          
        <td
          class="c-bolt-table__cell c-bolt-table__cell--data"
          style=""
        >
          
            
        
          <strong
            style=""
          >
             align 
          </strong>
          
      
          
        </td>
        
        
              
        <!---->
        
                
          
        <td
          class="c-bolt-table__cell c-bolt-table__cell--data"
          style=""
        >
          
            
        
          <p
            style=""
          >
            Horizontal alignment of items (text and icon) inside the button. Note: the values left and right are deprecated, use start and end instead.
          </p>
          
      
          
        </td>
        
        
              
        <!---->
        
                
          
        <td
          class="c-bolt-table__cell c-bolt-table__cell--data"
          style=""
        >
          
            
        
          <code
            style=""
          >
            string
          </code>
          
      
          
        </td>
        
        
              
        <!---->
        
                
          
        <td
          class="c-bolt-table__cell c-bolt-table__cell--data"
          style=""
        >
          
            
        
          <code
            style=""
          >
            center
          </code>
          
      
          
        </td>
        
        
              
        <!---->
        
                
          
        <td
          class="c-bolt-table__cell c-bolt-table__cell--data"
          style=""
        >
          
            
        
          <ul
            style=""
          >
            <li
              style=""
            >
              <code
                style=""
              >
                start
              </code>
            </li>
            <li
              style=""
            >
              <code
                style=""
              >
                center
              </code>
            </li>
            <li
              style=""
            >
              <code
                style=""
              >
                end
              </code>
            </li>
          </ul>
          
      
          
        </td>
        
        
              
        <!---->
        
        
      </tr>
      
      
                
      <!---->
      
            
    </tbody>
    
          
      
    <!---->
    
      
  </table>
  
    
  <!---->
</bolt-table>
`;

exports[`<bolt-table> Component borderless table: false 1`] = `
<bolt-table format="regular">
  <table class="c-bolt-table">
    <thead class="c-bolt-table__head">
      <tr class="c-bolt-table__row">
        <td class="c-bolt-table__cell">
        </td>
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="col"
        >
          Description
        </th>
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="col"
        >
          Team
        </th>
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="col"
        >
          Vehicle Form
        </th>
      </tr>
    </thead>
    <tbody class="c-bolt-table__body">
      <tr class="c-bolt-table__row">
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="row"
        >
          Optimus Prime
        </th>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          The awe-inspiring leader of the Autobot forces. Selfless and endlessly courageous, he is the complete opposite of his mortal enemy Megatron.
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          Autobots
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          Peterbilt Truck
        </td>
      </tr>
      <tr class="c-bolt-table__row">
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="row"
        >
          Bumblebee
        </th>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          One of Optimus Primes most trusted lieutenants. Although he is not the strongest or most powerful of the Autobots, Bumblebee more than makes up for this with a bottomless well of luck, determination and bravery. He would gladly give his life to protect others and stop the Decepticons.
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          Autobots
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          VW Beetle
        </td>
      </tr>
    </tbody>
  </table>
</bolt-table>
`;

exports[`<bolt-table> Component borderless table: true 1`] = `
<bolt-table format="regular"
            borderless
>
  <table class="c-bolt-table c-bolt-table--borderless">
    <thead class="c-bolt-table__head">
      <tr class="c-bolt-table__row">
        <td class="c-bolt-table__cell">
        </td>
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="col"
        >
          Description
        </th>
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="col"
        >
          Team
        </th>
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="col"
        >
          Vehicle Form
        </th>
      </tr>
    </thead>
    <tbody class="c-bolt-table__body">
      <tr class="c-bolt-table__row">
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="row"
        >
          Optimus Prime
        </th>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          The awe-inspiring leader of the Autobot forces. Selfless and endlessly courageous, he is the complete opposite of his mortal enemy Megatron.
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          Autobots
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          Peterbilt Truck
        </td>
      </tr>
      <tr class="c-bolt-table__row">
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="row"
        >
          Bumblebee
        </th>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          One of Optimus Primes most trusted lieutenants. Although he is not the strongest or most powerful of the Autobots, Bumblebee more than makes up for this with a bottomless well of luck, determination and bravery. He would gladly give his life to protect others and stop the Decepticons.
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          Autobots
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          VW Beetle
        </td>
      </tr>
    </tbody>
  </table>
</bolt-table>
`;

exports[`<bolt-table> Component first column fixed width table: false 1`] = `
<bolt-table format="regular">
  <table class="c-bolt-table">
    <thead class="c-bolt-table__head">
      <tr class="c-bolt-table__row">
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="col"
        >
          Prop
        </th>
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="col"
        >
          Description
        </th>
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="col"
        >
          Type
        </th>
      </tr>
    </thead>
    <tbody class="c-bolt-table__body">
      <tr class="c-bolt-table__row">
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          attributes
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus.
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          <code>
            object
          </code>
        </td>
      </tr>
      <tr class="c-bolt-table__row">
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          headers
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus.
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          <code>
            object
          </code>
        </td>
      </tr>
      <tr class="c-bolt-table__row">
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          rows
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus.
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          <code>
            array
          </code>
        </td>
      </tr>
      <tr class="c-bolt-table__row">
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          format
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus.
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          <code>
            string
          </code>
        </td>
      </tr>
    </tbody>
  </table>
</bolt-table>
`;

exports[`<bolt-table> Component first column fixed width table: true 1`] = `
<bolt-table format="regular"
            first-col-fixed-width
>
  <table class="c-bolt-table c-bolt-table--first-col-fixed-width">
    <thead class="c-bolt-table__head">
      <tr class="c-bolt-table__row">
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="col"
        >
          Prop
        </th>
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="col"
        >
          Description
        </th>
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="col"
        >
          Type
        </th>
      </tr>
    </thead>
    <tbody class="c-bolt-table__body">
      <tr class="c-bolt-table__row">
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          attributes
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus.
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          <code>
            object
          </code>
        </td>
      </tr>
      <tr class="c-bolt-table__row">
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          headers
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus.
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          <code>
            object
          </code>
        </td>
      </tr>
      <tr class="c-bolt-table__row">
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          rows
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus.
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          <code>
            array
          </code>
        </td>
      </tr>
      <tr class="c-bolt-table__row">
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          format
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus.
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          <code>
            string
          </code>
        </td>
      </tr>
    </tbody>
  </table>
</bolt-table>
`;

exports[`<bolt-table> Component table format: numeric 1`] = `
<bolt-table format="numeric">
  <table class="c-bolt-table c-bolt-table--format-numeric">
    <thead class="c-bolt-table__head">
      <tr class="c-bolt-table__row">
        <td class="c-bolt-table__cell">
        </td>
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="col"
        >
          Pts
        </th>
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="col"
        >
          Reb
        </th>
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="col"
        >
          Ast
        </th>
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="col"
        >
          Stl
        </th>
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="col"
        >
          Blk
        </th>
      </tr>
    </thead>
    <tbody class="c-bolt-table__body">
      <tr class="c-bolt-table__row">
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="row"
        >
          Michael Jordan
        </th>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          70
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          10
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          2
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          5
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          1
        </td>
      </tr>
      <tr class="c-bolt-table__row">
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="row"
        >
          Toni Kukoc
        </th>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          21
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          15
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          10
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          3
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          4
        </td>
      </tr>
      <tr class="c-bolt-table__row">
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="row"
        >
          Steve Kerr
        </th>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          5
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          2
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          20
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          5
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          0
        </td>
      </tr>
    </tbody>
    <tfoot class="c-bolt-table__foot">
      <tr class="c-bolt-table__row">
        <th class="c-bolt-table__cell c-bolt-table__cell--header">
          Total
        </th>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          91
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          27
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          32
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          13
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          5
        </td>
      </tr>
    </tfoot>
  </table>
</bolt-table>
`;

exports[`<bolt-table> Component table format: regular 1`] = `
<bolt-table format="regular">
  <table class="c-bolt-table">
    <thead class="c-bolt-table__head">
      <tr class="c-bolt-table__row">
        <td class="c-bolt-table__cell">
        </td>
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="col"
        >
          Pts
        </th>
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="col"
        >
          Reb
        </th>
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="col"
        >
          Ast
        </th>
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="col"
        >
          Stl
        </th>
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="col"
        >
          Blk
        </th>
      </tr>
    </thead>
    <tbody class="c-bolt-table__body">
      <tr class="c-bolt-table__row">
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="row"
        >
          Michael Jordan
        </th>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          70
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          10
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          2
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          5
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          1
        </td>
      </tr>
      <tr class="c-bolt-table__row">
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="row"
        >
          Toni Kukoc
        </th>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          21
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          15
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          10
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          3
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          4
        </td>
      </tr>
      <tr class="c-bolt-table__row">
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="row"
        >
          Steve Kerr
        </th>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          5
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          2
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          20
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          5
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          0
        </td>
      </tr>
    </tbody>
    <tfoot class="c-bolt-table__foot">
      <tr class="c-bolt-table__row">
        <th class="c-bolt-table__cell c-bolt-table__cell--header">
          Total
        </th>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          91
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          27
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          32
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          13
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          5
        </td>
      </tr>
    </tfoot>
  </table>
</bolt-table>
`;

exports[`<bolt-table> Component table with rows only 1`] = `
<bolt-table format="regular">
  <table class="c-bolt-table">
    <tbody class="c-bolt-table__body">
      <tr class="c-bolt-table__row">
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R1C1
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R1C2
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R1C3
        </td>
      </tr>
      <tr class="c-bolt-table__row">
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R2C1
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R2C2
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R2C3
        </td>
      </tr>
      <tr class="c-bolt-table__row">
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R3C1
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R3C2
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R3C3
        </td>
      </tr>
    </tbody>
  </table>
</bolt-table>
`;

exports[`<bolt-table> Component table with side headers 1`] = `
<bolt-table format="regular">
  <table class="c-bolt-table">
    <tbody class="c-bolt-table__body">
      <tr class="c-bolt-table__row">
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="row"
        >
          Row 1
        </th>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R1C1
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R1C2
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R1C3
        </td>
      </tr>
      <tr class="c-bolt-table__row">
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="row"
        >
          Row 2
        </th>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R2C1
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R2C2
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R2C3
        </td>
      </tr>
      <tr class="c-bolt-table__row">
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="row"
        >
          Row 3
        </th>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R3C1
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R3C2
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R3C3
        </td>
      </tr>
    </tbody>
  </table>
</bolt-table>
`;

exports[`<bolt-table> Component table with top and side headers 1`] = `
<bolt-table format="regular">
  <table class="c-bolt-table">
    <thead class="c-bolt-table__head">
      <tr class="c-bolt-table__row">
        <td class="c-bolt-table__cell">
        </td>
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="col"
        >
          Column 1
        </th>
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="col"
        >
          Column 2
        </th>
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="col"
        >
          Column 3
        </th>
      </tr>
    </thead>
    <tbody class="c-bolt-table__body">
      <tr class="c-bolt-table__row">
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="row"
        >
          Row 1
        </th>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R1C1
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R1C2
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R1C3
        </td>
      </tr>
      <tr class="c-bolt-table__row">
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="row"
        >
          Row 2
        </th>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R2C1
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R2C2
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R2C3
        </td>
      </tr>
      <tr class="c-bolt-table__row">
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="row"
        >
          Row 3
        </th>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R3C1
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R3C2
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R3C3
        </td>
      </tr>
    </tbody>
  </table>
</bolt-table>
`;

exports[`<bolt-table> Component table with top and side headers 2`] = `
<bolt-table format="regular">
  <table class="c-bolt-table">
    <thead class="c-bolt-table__head">
      <tr class="c-bolt-table__row">
        <td class="c-bolt-table__cell">
        </td>
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="col"
        >
          Column 1
        </th>
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="col"
        >
          Column 2
        </th>
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="col"
        >
          Column 3
        </th>
      </tr>
    </thead>
    <tbody class="c-bolt-table__body">
      <tr class="c-bolt-table__row">
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="row"
        >
          Row 1
        </th>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R1C1
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R1C2
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R1C3
        </td>
      </tr>
      <tr class="c-bolt-table__row">
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="row"
        >
          Row 2
        </th>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R2C1
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R2C2
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R2C3
        </td>
      </tr>
      <tr class="c-bolt-table__row">
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="row"
        >
          Row 3
        </th>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R3C1
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R3C2
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R3C3
        </td>
      </tr>
    </tbody>
    <tfoot class="c-bolt-table__foot">
      <tr class="c-bolt-table__row">
        <th class="c-bolt-table__cell c-bolt-table__cell--header">
          Footer
        </th>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          FC1
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          FC2
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          FC3
        </td>
      </tr>
    </tfoot>
  </table>
</bolt-table>
`;

exports[`<bolt-table> Component table with top headers 1`] = `
<bolt-table format="regular">
  <table class="c-bolt-table">
    <thead class="c-bolt-table__head">
      <tr class="c-bolt-table__row">
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="col"
        >
          Column 1
        </th>
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="col"
        >
          Column 2
        </th>
        <th class="c-bolt-table__cell c-bolt-table__cell--header"
            scope="col"
        >
          Column 3
        </th>
      </tr>
    </thead>
    <tbody class="c-bolt-table__body">
      <tr class="c-bolt-table__row">
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R1C1
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R1C2
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R1C3
        </td>
      </tr>
      <tr class="c-bolt-table__row">
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R2C1
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R2C2
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R2C3
        </td>
      </tr>
      <tr class="c-bolt-table__row">
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R3C1
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R3C2
        </td>
        <td class="c-bolt-table__cell c-bolt-table__cell--data">
          R3C3
        </td>
      </tr>
    </tbody>
  </table>
</bolt-table>
`;
